--- a/ChampionSelector/css/championselector.css
+++ b/ChampionSelector/css/championselector.css
@@ -26,14 +26,58 @@ body a {
 .champion {
     font-size:1em;
     float:left;
+    background-size:cover;
     text-align:center;
+        width:120px;
+    height:120px;
 }
 
 .champion .name {
     display:table-cell;
+    font-size:.8em;
     vertical-align:middle;
     width:120px;
     height:120px;
     background-color:rgba(0,0,0,0.50);
+    display:none;
+}
 
+.champion:hover .name {
+    display:block;
+}
+
+.name span {
+    transform: rotate(45deg);
+}
+
+.black_overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 120%;
+    background-color:rgba(0,0,0,.80);
+}
+
+.champbox {
+    display: none;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    z-index: 1002;
+    overflow: auto;
+}
+
+#Champion {
+    width:90%;
+}
+
+#SelectedChampion {
+    height:600px;
+}
+
+#SelectedChampion img, .champion img {
+    max-width: 100%;
+    max-height: 100%;
 }
